--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -39,17 +39,21 @@
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {
-    /*display: none;*/
+    display: none;
     opacity: 0;
     height: 0;
-    transition: height 1s;
+    /*transition: height 1s;*/
 }
 
-  .topnav a.icon {
+  .topnav .icon {
+    color: white;
     opacity: 1;
-    height: inherit;
+    height: 2rem;
+    width: 3rem;
     float: right;
     display: block;
+    text-align: center;
+    padding-top: .7rem;
   }
 }
 
@@ -58,10 +62,11 @@
   .topnav.responsive {
     position: relative;
     height: 190px;
-    transition: height 1s;
+    /*transition: height 1s;*/
   }
 
-  .topnav.responsive a.icon {
+  .topnav.responsive .icon {
+    color: white;
     position: absolute;
     right: 0;
     top: 0;
@@ -82,20 +87,26 @@
   }
 
   .topnav.responsive .GamesLink {
+    background-color: #ff7043;
+  display:block;
   animation: 0.5s ease-out 0s 1 slideInFromLeft;
   }
 
   .topnav.responsive .NewGameLink {
+    background-color: #ff7043;
+  display:block;
   animation: 0.7s ease-out 0s 1 slideInFromLeft;
   }
 
   .topnav.responsive .LogOutLink {
+    background-color: #ff7043;
+  display:block;
   animation: 0.9s ease-out 0s 1 slideInFromLeft;
   }
 
   @keyframes slideInFromLeft {
     0% {
-      display: block;
+      /*display: block;*/
       transform: translateX(-100%);
     }
     100% {
