--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,19 @@
+/***********************************
+Signup / Login Page Styling
+************************************/
+
 .App {
   text-align: center;
 }
-/***********************************/
+
+.App input {
+  margin-top: 7px;
+}
+
+
+/***********************************
+     /  Page Styling
+************************************/
 * {
   margin: 0;
   padding: 0;
@@ -12,18 +24,20 @@
     /*background-color: #333;*/
     background: linear-gradient(to right, #ff7043, #c63f17 50%);
     overflow: hidden;
+    /*position: fixed;
+    width: 100%;*/
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    font-family: 'Righteous', sans-serif;
+  color: #f2f2f2;
+  float: left;
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: 'Righteous', sans-serif;
 }
 
 /* Change the color of links on hover */
@@ -39,6 +53,14 @@
 
 .Logo {
   font-family: 'Righteous', sans-serif;
+}
+
+.selected {
+  color: black;
+}
+
+.material-icons {
+  margin-right: 10px;
 }
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@@ -60,13 +82,27 @@
     text-align: center;
     padding-top: .7rem;
   }
+
+  .topnav a:hover {
+      background: linear-gradient(to right, #ff7043, #c63f17 50% );
+      color: black;
+  }
+
+  .form-group {
+    height: 50%;
+    margin: 0px auto;
+    padding-top: 3.5rem;
+    width: 90%;
+  }
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
   .topnav.responsive {
     position: relative;
-    height: 190px;
+    height: 193px;
+    /*position: fixed;
+    width: 100%;*/
     /*transition: height 1s;*/
   }
 
@@ -92,21 +128,77 @@
   }
 
   .topnav.responsive .GamesLink {
-    background: linear-gradient(to right, #ff7043, #c63f17 50%);
+    /*background: linear-gradient(to right, #ff7043, #c63f17 50%);*/
     display:block;
     animation: 0.5s ease-out 0s 1 slideInFromLeft;
+    margin-top: 15px;
+    vertical-align: top;
   }
 
   .topnav.responsive .NewGameLink {
-    background: linear-gradient(to right, #ff7043, #c63f17 50%);
+    /*background: linear-gradient(to right, #ff7043, #c63f17 50%);*/
     display:block;
     animation: 0.7s ease-out 0s 1 slideInFromLeft;
+    margin-top: 15px;
   }
 
   .topnav.responsive .LogOutLink {
-    background: linear-gradient(to right, #ff7043, #c63f17 50%);
+    /*background: linear-gradient(to right, #ff7043, #c63f17 50%);*/
     display:block;
     animation: 0.9s ease-out 0s 1 slideInFromLeft;
+    margin-top: 15px;
+  }
+
+/***********************************
+  Mobile Game List Page Styling
+************************************/
+
+  .GameList {
+    background-color: #ddd;
+    padding-top: 0.7rem;
+  }
+
+  .each_game {
+    border: none;
+    background-image: url('../images/gplaypattern.png');
+    /*background-size: contain;*/
+    background-attachment: fixed;
+    box-shadow: 1px 1px 1px rgba(200, 200, 200, 0.5);
+    margin: 0px auto 0.7rem auto;
+    padding: 10px;
+    padding-left: 0px;
+    width: 97%;
+  }
+
+  .each_game a {
+    display: flex;
+  }
+
+  .game_initial {
+    align-items: center;
+    background-color: #ff7043;
+    border-radius: 50%;
+    display: flex;
+    flex-basis: 3rem;
+    justify-content: center;
+    margin: 0rem 1rem;
+  }
+
+  .game_initial h3 {
+    color: white;
+    padding-top: 5px;
+    text-transform: lowercase;
+  }
+
+  .game_title {
+    color: gray;
+    margin-bottom: 0px;
+  }
+
+  .game_category {
+    color: darkgray;
+    font-style: italic;
+    margin-bottom: 0px;
   }
 
   @keyframes slideInFromLeft {
@@ -117,6 +209,63 @@
     100% {
       transform: translateX(0);
     }
+  }
+
+  /***********************************
+    Mobile Single Game Page Styling
+  ************************************/
+
+  .singleGame {
+    /*background-color: #ddd;*/
+    height: 87vh;
+    padding-top: 1rem;
+  }
+
+
+  .singleGame .card {
+    border: none;
+    margin: 0rem auto;
+    width: 97%;
+  }
+
+  .house_rules {
+    display: flex;
+  }
+
+  .house_rules .btn {
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    display: flex;
+    justify-content: center;
+    margin-right: 1rem;
+    padding: 0.25rem;
+  }
+
+  .house_rules > .btn:focus, .house_rules > .btn.collapsed:focus {
+    outline: none;
+  }
+
+  .btn i {
+    margin-right: 0px;
+  }
+
+  .material-icons.rotate {
+    transform: rotate(180deg);
+    /* Safari */
+    -webkit-transform: rotate(180deg);
+    /* Firefox */
+    -moz-transform: rotate(180deg);
+    /* IE */
+    -ms-transform: rotate(180deg);
+    /* Opera */
+    -o-transform: rotate(180deg);
+
+    transition: transform 0.5s;
+    }
+
+  #demo {
+    margin-bottom: 0px;
   }
 
 }
