--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,6 +4,7 @@ Signup / Login Page Styling
 
 .App {
   text-align: center;
+  height: 90vh;
 }
 
 .App input {
@@ -43,7 +44,6 @@ Signup / Login Page Styling
 /* Change the color of links on hover */
 .topnav a:hover {
     background-color: #ddd;
-    color: black;
 }
 
 /* Hide the link that should open and close the topnav on small screens */
@@ -55,9 +55,9 @@ Signup / Login Page Styling
   font-family: 'Righteous', sans-serif;
 }
 
-.selected {
+/*.selected {
   color: black;
-}
+}*/
 
 .material-icons {
   margin-right: 10px;
@@ -68,6 +68,7 @@ Signup / Login Page Styling
 
   .topnav {
     height: 55px;
+    transition: height 0.7s;
   }
 
   .topnav a:not(:first-child) {
@@ -88,9 +89,13 @@ Signup / Login Page Styling
     padding-top: .7rem;
   }
 
+  .topnav .GamesLink, .topnav .NewGameLink, .topnav .LogOutLink {
+    animation: 0.9s ease-in 0s 1 slideOutToLeft;
+  }
+
   .topnav a:hover {
       background: linear-gradient(to right, #ff7043, #c63f17 50% );
-      color: black;
+      /*color: black;*/
   }
 
   .form-group {
@@ -98,6 +103,21 @@ Signup / Login Page Styling
     margin: 0px auto;
     padding-top: 3.5rem;
     width: 90%;
+  }
+
+  div.form-group.login, div.form-group.signup {
+    height: 50%;
+    /*margin-top: 2rem;*/
+  }
+
+  div.form-group.login {
+    padding-top: 3.5rem;
+  }
+
+  div.form-group.login .btn, div.form-group.signup .btn{
+    background-color: #ff7043;
+    color: white;
+    margin-top: 0.5rem;
   }
 }
 
@@ -129,7 +149,7 @@ Signup / Login Page Styling
 
   .topnav.responsive a:hover {
       background-color: #ddd;
-      color: black;
+      /*color: black;*/
   }
 
   .topnav.responsive .GamesLink {
@@ -159,20 +179,46 @@ Signup / Login Page Styling
 ************************************/
 
   .GameList {
-    background-color: #ddd;
+    /*background-color: #ddd;*/
     padding-top: 0.7rem;
+  }
+
+  .GameList .filter-bar {
+    color: #ff7043;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .filter_header {
+    color: darkgray;
+    text-align: center;
+  }
+
+  .filter-bar .material-icons {
+    font-size: 48px;
+  }
+
+  .filter-bar .card_hand {
+    transform: scale(-1, -1);
+  }
+
+  .filter-bar p {
+    color: darkgray;
+    font-size: 14px;
+    padding-left: 0.5rem;
   }
 
   .each_game {
     border: none;
+    border-radius: 0px;
     background-image: url('../images/gplaypattern.png');
     /*background-size: contain;*/
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     box-shadow: 1px 1px 1px rgba(200, 200, 200, 0.5);
     margin: 0px auto 0.7rem auto;
     padding: 10px;
     padding-left: 0px;
-    width: 97%;
+    width: 99%;
   }
 
   .each_game a {
@@ -214,8 +260,19 @@ Signup / Login Page Styling
     100% {
       transform: translateX(0);
     }
+
   }
 
+  @keyframes slideOutToLeft {
+    0% {
+      display: block;
+      transform: translateX(0);
+    }
+    100% {
+      display: none;
+      transform: translateX(-100%);
+    }
+  }
   /***********************************
     Mobile Single Game Page Styling
   ************************************/
@@ -223,14 +280,39 @@ Signup / Login Page Styling
   .singleGame {
     /*background-color: #ddd;*/
     height: 87vh;
-    padding-top: 1rem;
+    /*padding-top: 1rem;*/
   }
-
 
   .singleGame .card {
     border: none;
     margin: 0rem auto;
-    width: 97%;
+    padding: 0rem;
+    width: 100%;
+  }
+
+  .singleGame .title_block {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .arrow_container {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-right: 1rem;
+  }
+
+  .material-icons.md-36 {
+    color: gray;
+    font-size: 36px;
+  }
+
+  .title_block {
+    background-image: url('../images/gplaypattern.png');
+  }
+
+  .title_block a {
+    color: gray;
   }
 
   .singleGame h3 {
@@ -238,7 +320,39 @@ Signup / Login Page Styling
   }
 
   .singleGame .game_category {
-    margin-bottom: 1rem;
+    /*margin-bottom: 1rem;*/
+    padding-top: 0rem;
+  }
+
+  .icon_bar {
+    /*border-top: 1px solid lightgray;*/
+    border-bottom: 1px solid lightgray;
+    border-radius: 0px;
+    display: flex;
+    justify-content: space-around;
+    margin: 0rem auto;
+    padding: 0.25rem 1rem;
+    width: 100%;
+  }
+
+  .icon_bar div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .icon_bar i {
+    color: #ff7043;
+    font-size: 32px;
+    margin-right: 0rem;
+    text-align: center;
+  }
+
+  .icon_bar p {
+    color: gray;
+    font-size: 0.7rem;
+    margin-bottom: 0rem;
+    text-align: center;
   }
 
   .house_rules {
@@ -250,6 +364,7 @@ Signup / Login Page Styling
     align-items: center;
     background-color: transparent;
     border: none;
+    color: gray;
     display: flex;
     height: 2rem;
     justify-content: center;
@@ -282,22 +397,139 @@ Signup / Login Page Styling
     margin-bottom: 0px;
   }
 
-
-
   .normal_rules {
-    background-color: #eee;
-    border: 2px solid darkgray;
+    /*background-color: #eee;*/
+    /*border: 2px solid darkgray;*/
     color: gray;
   }
 
   .alt_rules {
-    background-color: #ffbb93;
-    border: 2px solid #c63f17;
-    color: #c63f17;
+    /*background-color: #ffbb93;
+    border: 2px solid #c63f17;*/
+    /*background-color: #fff;*/
+    background-image: url('../images/gplaypattern.png');
+    border-radius: 0px;
+    box-shadow:
+      inset 0px 11px 8px -10px #bbb,
+      inset 0px -11px 8px -10px #bbb;
+    color: #ff7043;
   }
 
   .alert span {
     font-size: 1.7rem;
+  }
+
+  .alert {
+    margin-bottom: 0rem;
+  }
+
+  /***********************************
+    Mobile Add Game Page Styling
+  ************************************/
+
+  .gameForm {
+    background-image: url('../images/gplaypattern.png');
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 90vh;
+  }
+/* test styling radio buttons */
+  /*.gameForm input[type=radio]{
+    position: absolute;
+    visibility: hidden;
+  }*/
+
+  /*.gameForm label{
+    display: block;
+    position: relative;
+    font-weight: 300;
+    font-size: 1.35em;
+    padding: 25px 25px 25px 80px;
+    margin: 10px auto;
+    height: 30px;
+    z-index: 9;
+    cursor: pointer;
+    -webkit-transition: all 0.25s linear;
+  }*/
+/*
+  .form-check .check{
+  display: block;
+  position: absolute;
+  border: 5px solid #AAAAAA;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
+  top: 30px;
+  left: 20px;
+	z-index: 5;
+	transition: border .25s linear;
+	-webkit-transition: border .25s linear;
+}*/
+
+  /*.form-check .check::before {
+    display: block;
+    position: absolute;
+  	content: '';
+    border-radius: 100%;
+    height: 15px;
+    width: 15px;
+    top: 5px;
+  	left: 5px;
+    margin: auto;
+  	transition: background 0.25s linear;
+  	-webkit-transition: background 0.25s linear;
+  }*/
+
+  /*.form-check input[type=radio]:checked ~ .check {
+    border: 5px solid #0DFF92;
+  }
+
+  .form-check input[type=radio]:checked ~ .check::before{
+    background: #0DFF92;
+  }
+
+  .form-check input[type=radio]:checked ~ label{
+    color: #0DFF92;
+  }*/
+
+
+/* end test styling radio buttons */
+
+  .form-group {
+    padding-top: 1rem;
+    height: 2rem;
+  }
+
+  fieldset.form-group {
+    padding-top: 0rem;
+  }
+
+  legend {
+    color: gray;
+    font-size: 16px;
+    margin-bottom: 0rem;
+    margin-left: 0.75rem;
+  }
+
+  label {
+    color: #ff7043;
+  }
+
+  .radio_buttons_cat {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  textarea {
+    resize: none;
+  }
+
+  .gameForm button {
+    background-color: #ff7043;
+    color: white;
+    margin: 0rem auto;
+    width: 40%;
   }
 
 }
