--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,7 @@ Signup / Login Page Styling
 ************************************/
 
 .App {
+  background: linear-gradient(to right, #ff7043, #c63f17 50%);
   text-align: center;
   height: 90vh;
 }
@@ -77,7 +78,7 @@ Signup / Login Page Styling
     padding-top: .7rem;
   }
 
-  .topnav .GamesLink, .topnav .NewGameLink, .topnav .LogOutLink {
+  .topnav .GamesLink, .topnav .NewGameLink, .topnav .LogOutLink, .topnav .AboutLink {
     animation: 0.9s ease-in 0s 1 slideOutToLeft;
   }
 
@@ -101,8 +102,8 @@ Signup / Login Page Styling
   }
 
   div.form-group.login .btn, div.form-group.signup .btn{
-    background-color: #ff7043;
-    color: white;
+    background-color: white;
+    color: #ff7043;
     margin-top: 0.5rem;
   }
 }
@@ -136,20 +137,26 @@ Signup / Login Page Styling
   .topnav.responsive .GamesLink {
     display:block;
     animation: 0.5s ease-out 0s 1 slideInFromLeft;
-    margin-top: 15px;
+    margin-top: 8px;
     vertical-align: top;
   }
 
   .topnav.responsive .NewGameLink {
     display:block;
     animation: 0.7s ease-out 0s 1 slideInFromLeft;
-    margin-top: 15px;
+    margin-top: 8px;
+  }
+
+  .topnav.responsive .AboutLink {
+    display:block;
+    animation: 0.9s ease-out 0s 1 slideInFromLeft;
+    margin-top: 8px;
   }
 
   .topnav.responsive .LogOutLink {
     display:block;
-    animation: 0.9s ease-out 0s 1 slideInFromLeft;
-    margin-top: 15px;
+    animation: 1.1s ease-out 0s 1 slideInFromLeft;
+    margin-top: 8px;
   }
 
 /***********************************
@@ -163,12 +170,12 @@ Signup / Login Page Styling
   .GameList .filter-bar {
     color: #ff7043;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
   }
 
   .GameList .filter-bar a {
     color: #ff7043;
-    flex-basis: 20%;
+    flex-basis: 18%;
     text-align: center;
   }
 
@@ -195,6 +202,8 @@ Signup / Login Page Styling
   .filter-bar .badge-pill {
     background-color: #ff7043;
     color: white;
+    font-size: 12px;
+    min-width: 50%;
   }
 
   .GameList .material-icons {
@@ -262,7 +271,7 @@ Signup / Login Page Styling
     }
     100% {
       display: none;
-      transform: translateX(-100%);
+      transform: translateX(-10%);
     }
   }
   /***********************************
@@ -523,5 +532,30 @@ Signup / Login Page Styling
     margin: 0rem auto;
     width: 40%;
   }
+
+  /***********************************
+     Mobile About Page Styling
+  ************************************/
+
+  .about-page {
+    background: linear-gradient(to right, #ff7043, #c63f17 50% );
+    min-height: 90vh;
+    padding-top: 1rem;
+  }
+
+  .about-page h2 {
+    color: white;
+    padding-bottom: 1rem;
+    text-align: center;
+  }
+
+  .about-page #accordian {
+    height: 100%;
+  }
+
+  .about-page a {
+    color: #ff7043;
+  }
+
 
 }
