--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -301,6 +301,17 @@ Signup / Login Page Styling
     display: flex;
     justify-content: center;
     margin-right: 1rem;
+    animation: 1s ease-out 0s 1 slideInFromRight;
+  }
+
+  @keyframes slideInFromRight {
+    0% {
+      transform: translateX(200%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+
   }
 
   .material-icons.md-36 {
