--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -214,7 +214,7 @@ Signup / Login Page Styling
   .each_game {
     border: none;
     border-radius: 0px;
-    background-image: url('../images/gplaypattern.png');
+    /*background-image: url('../images/gplaypattern.png');*/
     box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
     margin: 0px auto 0.7rem auto;
     min-height: 2rem;
@@ -240,7 +240,7 @@ Signup / Login Page Styling
 
   .game_initial h3 {
     color: white;
-    padding-top: 5px;
+    padding-top: 0.25rem;
     text-transform: lowercase;
   }
 
@@ -282,7 +282,9 @@ Signup / Login Page Styling
 
   .singleGame {
     /*background-color: #ddd;*/
-    height: 87vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 87vh;
     /*padding-top: 1rem;*/
   }
 
@@ -296,6 +298,8 @@ Signup / Login Page Styling
   .singleGame .title_block {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    min-height: 10rem;
   }
 
   .arrow_container {
@@ -349,9 +353,10 @@ Signup / Login Page Styling
   }
 
   .icon_bar div {
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    flex-basis: 30%;
   }
 
   .icon_bar i {
@@ -368,9 +373,25 @@ Signup / Login Page Styling
     text-align: center;
   }
 
+  .icon_bar #card {
+    transform: rotate(180deg);
+    /* Safari */
+    -webkit-transform: rotate(180deg);
+    /* Firefox */
+    -moz-transform: rotate(180deg);
+    /* IE */
+    -ms-transform: rotate(180deg);
+    /* Opera */
+    -o-transform: rotate(180deg);
+  }
+
   .game_objective {
     /*background: linear-gradient( #efefef, #fff,#efefef );*/
     color: #ff7043;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height: 7rem;
     text-align: center;
   }
 
@@ -420,14 +441,19 @@ Signup / Login Page Styling
     /*background-color: #eee;*/
     /*border: 2px solid darkgray;*/
     color: gray;
+    min-height: 8rem;
   }
 
   .alt_rules {
     /*background-color: #ffbb93;
     border: 2px solid #c63f17;*/
+
     /*background-color: #fff;*/
+
     /*background-image: url('../images/gplaypattern.png');*/
-    background: linear-gradient( #efefef, #fff,#efefef );
+
+    /*background: linear-gradient( #efefef, #fff,#efefef );*/
+
     border-radius: 0px;
     box-shadow:
       inset 0px 11px 8px -10px #bbb,
@@ -435,12 +461,25 @@ Signup / Login Page Styling
     color: #ff7043;
   }
 
-  .alert span {
+  .alt_rules p {
+    margin: 1rem auto;
+    width: 90%;
+  }
+
+  .alert h4 {
     font-size: 1.7rem;
   }
 
   .alert {
     margin-bottom: 0rem;
+  }
+
+  #delete_button {
+    align-self: center;
+    background-color: #ff7043;
+    color: white;
+    margin-top: 2rem;
+    width: 30%;
   }
 
   /***********************************
