--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -657,6 +657,44 @@ Signup / Login Page Styling
     color: #2cf;
   }
 
+  #altGamesList {
+    padding-top: 1rem;
+  }
+
+  .each_alternate {
+    align-items: center;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    display: flex;
+    margin: 0px auto 0.7rem auto;
+    height: 7rem;
+    padding: 10px;
+    padding-left: 0px;
+    width: 100%;
+  }
+
+  .each_alternate .alternate_initial {
+    background-color: #d7dd35;
+    border-radius: 50%;
+    box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.3);
+    color: white;
+    font-size: 2rem;
+    padding: 0.8rem 1.5rem 1rem;
+    margin: 0rem 2rem 0rem 1rem;
+    text-transform: lowercase;
+  }
+
+  .each_alternate .alternate_title {
+    color: #2cf;
+  }
+
+  .each_alternate .alternate_objective, .each_alternate .alternate_rules {
+    color: darkgray;
+  }
+
+
+
   /***********************************
      Mobile About Page Styling
   ************************************/
@@ -685,6 +723,32 @@ Signup / Login Page Styling
   .about-page a {
     /*color: #ff7043;*/
     color: #2cf;
+  }
+
+/***********************************
+   Add alternate form Styling
+************************************/
+
+  .alternateForm {
+    background-color: #02558b;
+    padding: 1rem;
+  }
+
+  .alternateForm h4 {
+    color: #fdfdff;
+    text-align: center;
+  }
+
+  .alternateForm input {
+    /*border: none;
+    border-bottom: 2px solid #2cf;*/
+    margin: 0rem auto 1rem;
+    width: 90%;
+  }
+
+  .alternateForm .btn {
+    background-color: #d7dd35;
+    color: white;
   }
 
 }
