Added overflow option on the add new game form, hopefully to fix a bug that sqaushes the screen when the phones keyboard pops up.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -576,7 +576,8 @@ Signup / Login Page Styling
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 92vh;
+    min-height: 92vh;
+    overflow: scroll;
   }
 
   .form-group {
